Minimum Java Version is now 11.