@@ -18,4 +18,8 @@ export IMPORTER_ROOT_DIR=$(realpath $(dirname $0))
 #
 #     -Xmx2G
 
-java -Dlog4j2.configurationFile="file:${IMPORTER_ROOT_DIR}/log4j.properties" -Dfile.encoding=UTF8 -cp "./lib/*:./classes" com.norconex.importer.Importer "$@"
+java -Dlog4j2.configurationFile="file:${IMPORTER_ROOT_DIR}/log4j.properties" \
+     -Dfile.encoding=UTF8 \
+     --add-opens=java.base/java.util=ALL-UNNAMED \
+     --add-opens=java.base/java.lang=ALL-UNNAMED \
+     -cp "./lib/*:./classes" com.norconex.importer.Importer "$@"
